# TWI_POC

./: .flake8  .gitignore  INSTALL.md  PETER_GAP.md  README.md  agent_vendor_guide_v2.docx  agentize_poc_faq.docx  codebase_snapshot.md  go_live_guide.md  poc_implementation_specification.md  poc_technical_spec.md  poc_vibe_coding_context.md  specification.md
.claude/: settings.local.json
.cursor/rules/: azure-service-clients.mdc  bicep-infra-conventions.mdc  bot-adaptive-cards.mdc  eu-ai-act-compliance.mdc  langgraph-agent-patterns.mdc  python-backend-patterns.mdc
.cursor/skills/agentize-poc-architecture/: SKILL.md
.cursor/skills/agentize-poc-azure-infra/: SKILL.md
.cursor/skills/agentize-poc-bot-cards/: SKILL.md
.cursor/skills/agentize-poc-langgraph/: SKILL.md
.devcontainer/: Dockerfile.fallback  README.md  devcontainer-repair.ps1  devcontainer.fallback.json  devcontainer.json
.github/workflows/: deploy.yml
archive/: poc_implementation_specification.md  poc_technical_spec.md  poc_vibe_coding_context.md
poc-backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
poc-backend/.devcontainer/: devcontainer.fallback.json  devcontainer.json
poc-backend/app/: config.py  main.py
poc-backend/app/agent/: graph.py  mongodb_checkpointer.py  state.py
poc-backend/app/agent/nodes/: approve.py  audit.py  clarify.py  generate.py  intent.py  output.py  process_input.py  question.py  review.py  revise.py
poc-backend/app/agent/tools/: pdf_generator.py
poc-backend/app/api/: documents.py  telegram.py
poc-backend/app/bot/: adaptive_cards.py  bot_handler.py
poc-backend/app/locale/: __init__.py  en.py  hu.py  registry.py
poc-backend/app/middleware/: rate_limit.py
poc-backend/app/models/: __init__.py  audit_entry.py  conversation.py  twi_document.py
poc-backend/app/services/: ai_foundry.py  blob_storage.py  checkpoint.py  cosmos_db.py  key_vault.py
poc-backend/app/templates/: twi_template.html
poc-backend/infra/: deploy.ps1  deploy.sh  error.txt  main.bicep  parameters.example.json  validate.ps1
poc-backend/tests/: conftest.py  test_ai_foundry.py  test_audit.py  test_blob_storage.py  test_bot_handler.py  test_checkpoint_integration.py  test_cosmos_db.py  test_e2e_chat.py  test_generation.py  test_graph.py  test_local_bot.py  test_mongodb_checkpointer.py  test_output.py  test_pdf.py
teams-app/: manifest.json  strings-en.json
