[project]
name = "agentize-poc-backend"
version = "0.1.0"
description = "Enterprise AI platform for TWI generation"
authors = [
    { name = "agentize.eu", email = "info@agentize.eu" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "botbuilder-core>=4.17.0",
    "botbuilder-integration-aiohttp>=4.17.0",
    "aiohttp>=3.10.0",
    "langgraph>=1.0.0",
    "langchain-core>=1.2.0",
    "azure-identity>=1.25.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-storage-blob>=12.28.0",
    "azure-ai-inference>=1.0.0b1,<2.0.0",
    "pymongo>=4.16.0",
    "motor>=3.7.0",
    "jinja2>=3.1.0",
    "weasyprint>=68.0",
    "markdown>=3.10.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.0",
    "opentelemetry-api>=1.36.0,<1.40.0",
    "opentelemetry-sdk>=1.36.0,<1.40.0",
    "azure-monitor-opentelemetry>=1.6.13,<1.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
